Further examples on streams.